# LibreMiddleware

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
build-opensc/: CMakeCache.txt  Makefile  cmake_install.cmake
build-opensc/lib/cardedge/: Makefile  cmake_install.cmake
build-opensc/lib/eidcard/: Makefile  cmake_install.cmake
build-opensc/lib/healthcard/: Makefile  cmake_install.cmake
build-opensc/lib/opensc-driver/: Makefile  cmake_install.cmake
build-opensc/lib/pkcs11/: Makefile  (+2 more)
cmake/: FindPCSC.cmake  FindUUID.cmake  GitVersion.cmake
docs/: CONTRIBUTING-PLUGIN.md
lib/cardedge/: CMakeLists.txt
lib/cardedge-opensc-driver/: CMakeLists.txt  README.md
lib/cardedge-opensc-driver/conf/: librescrs.conf
lib/cardedge-opensc-driver/src/: librescrs_opensc.c
lib/cardedge-pkcs11/: CMakeLists.txt
lib/cardedge-pkcs11/src/: pkcs11.cpp  pkcs11_library.cpp  pkcs11_library.h  pkcs11_platform.h  pkcs11_version.h.in
lib/cardedge-plugin/: CMakeLists.txt
lib/cardedge-plugin/src/: cardedge_card_plugin.cpp
lib/cardedge/include/cardedge/: cardedge.h  cardedge_pkcs11_provider.h  cardedgetypes.h  pki_applet_guard.h
lib/cardedge/src/: cardedge.cpp  cardedge_pkcs11_provider.cpp  cardedge_protocol.h
lib/eidcard/: CMakeLists.txt
lib/eidcard-plugin/: CMakeLists.txt
lib/eidcard-plugin/src/: eid_card_plugin.cpp
lib/eidcard/include/eidcard/: eid_pkcs11_provider.h  eidcard.h  eidtypes.h
lib/eidcard/src/: card_protocol.h  card_reader_apollo.cpp  card_reader_apollo.h  card_reader_base.h  card_reader_gemalto.cpp  card_reader_gemalto.h  card_verifier.cpp  card_verifier.h  eid_pkcs11_provider.cpp  eidcard.cpp
lib/emrtd/: CMakeLists.txt
lib/emrtd-crypto/: CMakeLists.txt
lib/emrtd-crypto/include/emrtd/crypto/: active_auth.h  bac.h  chip_auth.h  pace.h  passive_auth.h  secure_messaging.h  types.h
lib/emrtd-crypto/src/: active_auth.cpp  bac.cpp  chip_auth.cpp  crypto_utils.cpp  crypto_utils.h  pace.cpp  passive_auth.cpp  secure_messaging.cpp
lib/emrtd-plugin/: CMakeLists.txt
lib/emrtd-plugin/src/: emrtd_card_plugin.cpp
lib/emrtd/include/emrtd/: data_group.h  emrtd_card.h  emrtd_types.h
lib/emrtd/src/: data_group.cpp  emrtd_card.cpp
lib/eu-vrc/: CMakeLists.txt
lib/eu-vrc-plugin/: CMakeLists.txt
lib/eu-vrc-plugin/src/: eu_vrc_card_plugin.cpp
lib/eu-vrc/include/eu-vrc/: eu_vrc_card.h  eu_vrc_types.h
lib/eu-vrc/src/: eu_vrc_card.cpp  eu_vrc_detection.cpp  eu_vrc_detection.h  eu_vrc_protocol.h
lib/healthcard/: CMakeLists.txt
lib/healthcard-plugin/: CMakeLists.txt
lib/healthcard-plugin/src/: health_card_plugin.cpp
lib/healthcard/include/healthcard/: healthcard.h  healthtypes.h
lib/healthcard/src/: health_protocol.h  healthcard.cpp
lib/opensc-driver/: CMakeLists.txt  README.md
lib/opensc-driver/conf/: librescrs.conf
lib/opensc-driver/src/: librescrs_opensc.c
lib/opensc-plugin/: CMakeLists.txt
lib/opensc-plugin/src/: opensc_card_plugin.cpp
lib/piv/: CMakeLists.txt
lib/piv-plugin/: CMakeLists.txt
lib/piv-plugin/src/: piv_card_plugin.cpp
lib/piv/include/piv/: piv_card.h  piv_types.h
lib/piv/src/: piv_card.cpp  piv_protocol.h
lib/pkcs11/: CMakeLists.txt
lib/pkcs11/src/: pkcs11.cpp  pkcs11_library.cpp  pkcs11_library.h  pkcs11_platform.h  pkcs11_version.h.in
lib/pkcs15/: CMakeLists.txt
lib/pkcs15-plugin/: CMakeLists.txt
lib/pkcs15-plugin/src/: pkcs15_card_plugin.cpp
lib/pkcs15/include/pkcs15/: pkcs15_card.h  pkcs15_parser.h  pkcs15_types.h
lib/pkcs15/src/: pkcs15_card.cpp  pkcs15_parser.cpp
lib/pkscard/: CMakeLists.txt
lib/pkscard-plugin/: CMakeLists.txt
lib/pkscard-plugin/src/: pks_card_plugin.cpp
lib/pkscard/include/pkscard/: pkscard.h
lib/pkscard/src/: pkscard.cpp
lib/plugin/: CMakeLists.txt
lib/plugin/include/plugin/: auto_reader.h  card_data.h  card_plugin.h  card_plugin_registry.h  security_check.h
lib/plugin/src/: auto_reader.cpp  card_plugin_registry.cpp
lib/rs-eid/: CMakeLists.txt
lib/rs-eid-plugin/: CMakeLists.txt
lib/rs-eid-plugin/src/: eid_card_plugin.cpp
lib/rs-health/: CMakeLists.txt
lib/rs-health-plugin/: CMakeLists.txt
lib/rs-health-plugin/src/: health_card_plugin.cpp
lib/rs-health/include/rshealth/: healthcard.h  healthtypes.h
lib/rs-health/src/: healthcard.cpp
lib/smartcard/: CMakeLists.txt
lib/smartcard/include/smartcard/: apdu.h  ber.h  ipcsc_scan_provider.h  monitor.h  monitor_event.h  pcsc_connection.h  pcsc_scan_provider.h  pkcs11_card_provider.h  secure_buffer.h  tlv.h
lib/smartcard/src/: apdu.cpp  ber.cpp  monitor.cpp  pcsc_connection.cpp  tlv.cpp
lib/vehiclecard/: CMakeLists.txt
lib/vehiclecard-plugin/: CMakeLists.txt
lib/vehiclecard-plugin/src/: vehicle_card_plugin.cpp
scripts/linux/: build-cardedge-pkcs11-tar.sh  build-pkcs11-tar.sh
scripts/macos/: build-cardedge-pkcs11-zip.sh  build-pkcs11-zip.sh
test/: CMakeLists.txt  aodf_probe.cpp  apdu_select_p2_test.cpp  auto_reader_test.cpp  bac_test.cpp  card_data_test.cpp  card_plugin_registry_test.cpp  cardedge_plugin_test.cpp  data_group_test.cpp  eidcard_test.cpp  emrtd_crypto_test.cpp  emrtd_plugin_test.cpp  eu_vrc_test.cpp  fci_format_probe.cpp  healthcard_test.cpp  mock_pcsc_scan_provider.h  monitor_test.cpp  mrz_parse_test.cpp  opensc_plugin_test.cpp  pace_hardware_test.cpp  pace_test.cpp  pcsc_connection_filter_test.cpp  pin_test_cli.cpp  piv_hardware_test.cpp  piv_parser_test.cpp  pkcs11_test.cpp  pkcs15_after_pace_probe.cpp  pkcs15_parser_test.cpp  pkcs15_plugin_test.cpp  pkcs15_probe.cpp  pkcs15_test_vectors.h  pks_pin_test_cli.cpp  pks_plugin_test.cpp  plugin_integration_test.cpp  secure_messaging_test.cpp  smartcard_test.cpp  vehiclecard_test.cpp
test/mock_card_plugin/: CMakeLists.txt  mock_card_plugin.cpp
tools/: CMakeLists.txt
tools/card_mapper/: CMakeLists.txt  README.md  apdu_logger.cpp  apdu_logger.h  card_mapper.1  card_scanner.cpp  card_scanner.h  cli_options.cpp  cli_options.h  main.cpp  output_formatter.cpp  output_formatter.h  plugin_mapper.cpp  plugin_mapper.h  scaffold_generator.cpp  scaffold_generator.h
(+37 files in other folders)
